@@ -102,10 +102,12 @@ export(
   , pnbetaAS310
   , pnbetaAppr2, pnbetaAppr2v1
 
-  ## Naming -fixme?
   , pnchisq
   , pnchisqAbdelAty, pnchisqPatnaik, pnchisqPearson, pnchisqSankaran_d
   , pnchisq_ss, pnchisqIT, pnchisqTerms, pnchisqV
+  , pnchisqT93, pnchisqT93.a, pnchisqT93.b
+  , pnchisqBolKuz
+  , qnchisqBolKuz
 
   ## Naming -fixme?
   , pnt3150, pnt3150.1
