@@ -20,7 +20,7 @@ pnchisq <- function(q, df, ncp = 0, lower.tail = TRUE,
                     cutOffncp = 80, itSimple = 110,
                     errmax = 1e-12, reltol = 1e-11,
                     maxit = 10* 10000,
-                    verbose = 1, xLrg.sigma = 5)
+                    verbose = 0, xLrg.sigma = 5)
 {
   ## Purpose: R simulation of C's pnchisq_raw() --- almost everything 2003--Feb.27_2004
     ##          long before the 'log.p=TRUE' addition there (in April 2014),
@@ -237,7 +237,7 @@ pnchisqPearson <- function(q, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
     n2 <- df + 2*ncp
     n3 <- n2 + ncp ## = df + 3*ncp
     r <- n2 / n3
-    pchisq((q + ncp*ncp/n3) *r, df = n2*r*r,
+    pchisq((q + ncp/n3*ncp) *r, df = n2*r*r,
            lower.tail=lower.tail, log.p=log.p)
 }
 
@@ -247,12 +247,14 @@ pnchisqAbdelAty <-  function(q, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
     ## Purpose: Abdel-Aty(1954) "first approx." (Wilson-Hilferty) approximation to pnchisq()
     ## Johnson,Kotz,...: Has it *WRONGLY*  in eq. (29.61a), p.463
     ## ----------------------------------------------------------------------
-    ## Author: Martin Maechler, Date: 2018-08-16
+    ## Author: Martin Maechler, Date: 2018-08-16; careful sqrt(): 2019-09-02
     r <- df + ncp
     n2 <- r + ncp # = df + 2*ncp
-    V <- 2*n2 / (9*r^2)
-    pnorm((q/r)^(1/3), mean = 1-V, sd = sqrt(V),
-          lower.tail=lower.tail, log.p=log.p)
+    V <- 2/9 * n2/r/r # == "stable version" of  2*n2 / (9*r^2)
+    sV <- sqrt(V)
+    if(any(off <- V < .Machine$double.xmin | V > .Machine$double.xmax))
+        sV[off] <- sqrt(2*n2[off]) / r[off] / 3
+    pnorm((q/r)^(1/3), mean = 1-V, sd = sV, lower.tail=lower.tail, log.p=log.p)
 }
 
 pnchisqSankaran_d <- function(q, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
@@ -265,8 +267,8 @@ pnchisqSankaran_d <- function(q, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
     h1 <- - 2/3 * r*n3/n2^2 # =  h - 1
     h <- 1 + h1
     mu <- 1 + h*h1*q1*(1 + (h-2)*(1-3*h)*q1/2)
-    V  <-   2*h^2 *q1*(1 +  h1 * (1-3*h)*q1)
-    pnorm((q/r)^h, mean = mu, sd = sqrt(V),
+    sV  <- h * sqrt(2*q1 * (1 + h1 * (1-3*h)*q1))
+    pnorm((q/r)^h, mean = mu, sd = sV,
           lower.tail=lower.tail, log.p=log.p)
 }
 
@@ -433,8 +435,10 @@ ss2 <- function(x, df, ncp, i.max = 10000, eps = .Machine$double.eps)
 }
 
 
-pnchisq_ss <- function(x, df, ncp, lower.tail=TRUE, log.p=FALSE, i.max = 10000) {
+pnchisq_ss <- function(x, df, ncp = 0, lower.tail=TRUE, log.p=FALSE, i.max = 10000) {
     ## deal with boundary cases as in pnchisq()
+    if(length(x)  != 1) stop("'x' must be of length 1")
+    if(length(df) != 1) stop("'df' must be of length 1")
     if(x <= 0) {
 	if(x == 0 && df == 0)
 	    return(
@@ -559,4 +563,94 @@ pnchisqRC <- function(q, df, ncp = 0, lower.tail = TRUE, log.p = FALSE,
     .Call(C_Pnchisq_R, ## ../src/pnchisq-it.c
           as.double(q), as.double(df), as.double(ncp), lower.tail, log.p,
           no2nd.call, cutOffncp, small.ncp.logspace, itSimple, errmax, reltol, epsS, maxit, verbose)
+}
+
+
+### "x and ncp *both* large" --  "due to Temme(1993)" in
+### ========================  Johnson et al., p.467, formulas  (29.71a) and  (29.71b)
+
+## The first two functions, formula "a" and "b", are auxiliary for the third:
+
+pnchisqT93.a <- function(q, df, ncp, lower.tail = TRUE, log.p = FALSE) {
+    stopifnot(ncp > 0, length(lower.tail) == 1L, length(log.p) == 1L)
+    if(log.p && !lower.tail) {
+        ## return log(Ip) but computed *directly*:
+        ##  careful about  log(q/ncp) :
+        ok <- .Machine$double.xmin <= (r <- q/ncp)  &  r <= .Machine$double.xmax
+        lg.ql[ ok] <- log(r[ok])
+        lg.ql[!ok] <- log(q[!ok]) - log(ncp[!ok])
+        ((df - 1)/4) * lg.ql +  pnorm(sqrt(2*q) - sqrt(2*ncp), lower.tail=FALSE, log.p=TRUE)
+    }
+    else {
+        Ip <- (q/ncp)^((df - 1)/4) * pnorm(sqrt(2*q) - sqrt(2*ncp), lower.tail=FALSE)
+        if(log.p) ## if(lower.tail) log1p(-Ip) else log(Ip) -- by now, know that lower.tail is TRUE:
+            log1p(-Ip)
+        else {
+            if(lower.tail) 1 - Ip else Ip
+        }
+    }
+}
+
+pnchisqT93.b <- function(q, df, ncp, lower.tail = TRUE, log.p = FALSE) {
+    stopifnot(ncp > 0, length(lower.tail) == 1L, length(log.p) == 1L)
+
+    ## p ~= (q/ncp)^((df - 1)/4) * pnorm(sqrt(2*ncp) - sqrt(2*q), lower.tail=FALSE)
+    ## return
+    ## if(log.p) {
+    ##     if(lower.tail) log(p) else log1p(-p)
+    ## } else {
+    ##     if(lower.tail)  p     else  1-p
+    ## }
+    if(log.p && lower.tail) {
+        ## return log(p) but computed *directly*:
+        ##  careful about  log(q/ncp) :
+        ok <- .Machine$double.xmin <= (r <- q/ncp)  &  r <= .Machine$double.xmax
+        lg.ql[ ok] <- log(r[ok])
+        lg.ql[!ok] <- log(q[!ok]) - log(ncp[!ok])
+        ((df - 1)/4) * lg.ql +  pnorm(sqrt(2*ncp) - sqrt(2*q), lower.tail=FALSE, log.p=TRUE)
+    }
+    else {
+        p <- (q/ncp)^((df - 1)/4) * pnorm(sqrt(2*ncp) - sqrt(2*q), lower.tail=FALSE)
+        if(log.p) ## by now, know that lower.tail is FALSE:
+            log1p(-p)
+        else {
+            if(lower.tail) p else 1 - p
+        }
+    }
+}
+
+
+pnchisqT93 <- function(q, df, ncp, lower.tail = TRUE, log.p = FALSE,
+                       use.a = q > ncp)
+{
+    ## use.a is "vector"
+    stopifnot(ncp > 0, !anyNA(a <- use.a)) # 'a' for convenience
+    if(!length(a) || !(n <- length(ncp))) return(numeric(0)) # else positive lengths => "recycling"
+    # n := max(length(.)..) to which recycling happens
+    if(missing(a)) { # may have any length ..
+        if(n < length( q)) n <- length(q)
+        if(n < length(df)) n <- length(df)
+    }
+    if(n < length(a)) n <- length(a)
+    else if(
+       length(  a) < n)   a <- rep_len(a, n)
+    if(length(  q) < n)   q <- rep_len(q, n)
+    if(length( df) < n)  df <- rep_len(df, n)
+    if(length(ncp) < n) ncp <- rep_len(ncp, n)
+    r <- q
+    r[ a] <- pnchisqT93.a(q[ a], df[ a], ncp[ a], lower.tail=lower.tail, log.p=log.p)
+    r[!a] <- pnchisqT93.b(q[!a], df[!a], ncp[!a], lower.tail=lower.tail, log.p=log.p)
+    r
+}
+
+### From Johnson et al., p.465 f : Formulas by   Bol'shev and Kuzntzov (1963) [Russian]
+### formula (29.63) {and w* above that}
+### Useful for small  λ = ncp: error is  O(λ³)  uniformly in any finite interval of q
+pnchisqBolKuz <- function(q, df, ncp = 0, lower.tail = TRUE, log.p = FALSE)
+{
+    stopifnot(df > 0)
+    lnu <- ncp/df # = λ/ν = λν⁻¹
+    w. <- q*(1 + lnu*(-1 + .5*lnu*(1 + q/(df+2))))
+    ## central χ² (same ν (df)) with w* instead of q :
+    pchisq(w., df=df, lower.tail=lower.tail, log.p=log.p)
 }
